-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0
-
None
The Bluetooth for Android port uses a lot of actions which are defined as static final String. Currently the strings are directly used. There is no guarantee that strings don't change. Therefore the static fields should rather be used.
This requires some caching to avoid too much performance drain.
This was highlighted by:
https://codereview.qt-project.org/#patch,sidebyside,77809,4,src/bluetooth/android/devicediscoverybroadcastreceiver.cpp
- is required for
-
QTBUG-36712 Issues to be fixed before 5.3.0 Beta 1 release
-
- Closed
-
For Gerrit Dashboard: QTBUG-36810 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
79762,4 | Android: Don't directly use the action string values but refer to the fields. | stable | qt/qtconnectivity | Status: MERGED | +2 | 0 |
79835,2 | Android: Don't directly use java field values | stable | qt/qtconnectivity | Status: MERGED | +2 | 0 |