Android: Don't directly use the action string values but refer to the fields.

This increases the robustness of the code since the field value
is not an implementation detail.

In addition we guard the action field lookup against fields
which have been introduced later than the standard SDK version 10
supported by Qt.

Task-number: QTBUG-36810
Change-Id: Ib6582e77202d40aaf116fe8dfa81562d89367ea2
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>